# singular-app

./: Dockerfile  Makefile  README.md  pyproject.toml
api/: app.py
data/: weather_data_20250105_104152_wind_ranked.csv
scripts/weather/: main.py
tests/scripts/: test_main.py
tests/services/: test_cities.py  test_weather.py
weather_app/: adapter.py  constants.py  models.py
weather_app/services/: cities.py  weather.py
